# hibp_downloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: buffered_string_writer.rs  config.rs  consts.rs  download.rs  lib.rs  main.rs  progress_style.rs  tasks.rs
src/hibp_lib/: buffered_string_writer.rs  config.rs  consts.rs  download.rs  mod.rs  progress_style.rs  stats.rs  tasks.rs
src/hibp_lib/sort/: mod.rs  row.rs
src/sort/: mod.rs
