[package]
name = "hibp_downloader"
version = "1.0.3"
license = "MIT"
authors = [
    "Jonathan Underwood <jonathan.underwood4649@gmail.com>"
]
edition = "2021"
homepage = "https://github.com/junderw/hibp_downloader"
repository = "https://github.com/junderw/hibp_downloader"
documentation = "https://docs.rs/hibp_downloader"
description = "A CLI app for downloading and/or sorting HaveIBeenPwned password hashes."

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
extsort = "0.4.2"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-log = "0.1.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
