[package]
name = "hibp_downloader"
version = "1.1.2"
license = "MIT"
authors = [
    "Jonathan Underwood <jonathan.underwood4649@gmail.com>"
]
edition = "2021"
homepage = "https://github.com/junderw/hibp_downloader"
repository = "https://github.com/junderw/hibp_downloader"
documentation = "https://docs.rs/hibp_downloader"
description = "A CLI app for downloading and/or sorting HaveIBeenPwned password hashes."

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
extsort = "0.4.2"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Used for GUI binary
eframe = { version = "0.26", optional = true }

[lib]
name = "hibp_downloader"
path = "src/hibp_lib/mod.rs"

[[bin]]
name = "hibp_downloader_gui"
path = "src/bin/gui.rs"
required-features = ["eframe"]
